[tool.poetry]
name = "dwn-rig"
version = "0.1.0"
description = "Download images and GIFs from reddit posts."
authors = ["Seyfullah Gündoğdu <seyfullahgundogdu74@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.3"
requests = "^2.31.0"
configargparse = "^1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dwn-rig = "dwn_rig.__main__:main"